--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
-
+<html>
+  <head>
+    <script src="hi.js"></script>
+    <title>test speed</title>
+  </head>
+  <body>
 <input type="button" value="test" onclick="aji()"></input>
-<script src="hi.js"></script>
+
+  </body>
+</html>
